# AdaptiveDynamicArray_20220318

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
DA_Bidirectional/: DAbidirectional.cpp  DAbidirectional.h  DAnolimitBidirectional.cpp  DAnolimitBidirectional.h  DAstaticBidirectional.cpp  DAstaticBidirectional.h
DataStructures/: CBT_Xcode.cpp  CBT_Xcode.h  CountedBtree.cpp  CountedBtree.h  DAnolimit.cpp  DAnolimit.h  DAstatic.cpp  DAstatic.h  DynamicArray.cpp  DynamicArray.h  DynamicArrayMemoryCheck.cpp  LinkedList.cpp  LinkedList.h  StandardArray.cpp  tiered-vector.h
Experiments/ADA_TV/insert/: Makefile  chart2.py  insert1  insert1.cpp  insert1.csv  insert1Log.txt  insert2  insert2.cpp  insert3.cpp
Experiments/Ablation/1M/: Makefile  delete.cpp  insert.cpp  move.cpp  pointquery.cpp  query.cpp  reorder.cpp  swap.cpp
Experiments/AblationOne+Bidirectional/100K/: Makefile  delete.cpp  insert.cpp  move.cpp  notes  query.cpp  reorder.cpp  swap.cpp
Experiments/AblationOne+Bidirectional/1M/: delete.cpp  insert.cpp  move.cpp  query.cpp  reorder.cpp  swap.cpp
Experiments/AveBaseline/100K/: 0.cpp  1.cpp  2.cpp  3.cpp
Experiments/AveBaseline/1M/: 0.cpp  1.cpp  2.cpp  3.cpp
Experiments/Baseline_0/100K/: 2-0702-pointquery.cpp  2-0702-query10.cpp  2-0702-query100.cpp  2-0702-query1000.cpp  2-0702-query50.cpp  2-0702-query500.cpp  Makefile  delete100K.cpp  insert100K.cpp  move100K.cpp  pointquery100K.cpp  query100K.cpp  reorder100K.cpp  swap100K.cpp
Experiments/Baseline_0/1M/: 2-0702-query10.cpp  2-0702-query100.cpp  2-0702-query1000.cpp  2-0702-query500.cpp  Makefile  move.cpp  query.cpp  reorder.cpp  swap.cpp
Experiments/Baseline_1_20220109/10M_0_20220520/: delete1.csv  delete1Log.txt  fig.py  insert1.csv  insert1Log.txt  mem.sh  pointquery1.csv  pointquery1Log.txt  query1.csv  query1Log.txt  reorder1.csv  reorder1Log.txt  swap1.csv  swap1Log.txt
Experiments/Baseline_1_20220109/10M_1_20220527/: run2.sh
Experiments/Baseline_1_20220109/10Mrepeat5/: Makefile  average  avg.csv  delete1.csv  delete2.csv  delete2Log.txt  delete3.csv  delete4.csv  delete4Log.txt  delete5Log.txt  delete_avg.csv  insert1.csv  insert1Log.txt  insert2.csv  insert4.csv  insert4Log.txt  insert5.csv  pointquery1.csv  pointquery1Log.txt  pointquery2Log.txt  pointquery3.csv  query1.csv  query1Log.txt  query2.csv  query2Log.txt  query3.csv  query3Log.txt  query4.csv  query4Log.txt  query5.csv  query_avg.csv  reorder1Log.txt  reorder2.csv  reorder2Log.txt  reorder4Log.txt  swap1.csv  swap1Log.txt  swap2.csv  swap2Log.txt  swap3.csv  (+5 more)
Experiments/Baseline_1_20220109/10Mrepeat5_1_20220527/: run1.sh
Experiments/Baseline_1_20220109/10Mrepeat5_2_20220608/: delete1Log.txt  delete3Log.txt  delete5.csv  fig.py  insert2Log.txt  insert3.csv  insert3Log.txt  insert5Log.txt  insert_avg.csv  pointquery2.csv  pointquery3Log.txt  pointquery4.csv  pointquery4Log.txt  pointquery5.csv  pointquery5Log.txt  pointquery_avg.csv  query1Log.txt  query2.csv  query3.csv  query3Log.txt  query5Log.txt  reorder1.csv  reorder3.csv  reorder3Log.txt  reorder4.csv  reorder5.csv  reorder5Log.txt  run.sh  swap1.csv  swap2Log.txt  swap3.csv  swap3Log.txt  swap5.csv  swap5Log.txt  swap_avg.csv
Experiments/Baseline_1_20220109/1Mrepeat5/: average  avg.csv  delete1.csv  delete1Log.txt  delete2.csv  delete2Log.txt  delete3.csv  delete3Log.txt  delete4.csv  delete4Log.txt  delete5.csv  delete5Log.txt  delete_avg.csv  insert1.csv  insert1Log.txt  insert2.csv  insert2Log.txt  insert3.csv  insert3Log.txt  insert4.csv  insert4Log.txt  insert5.csv  insert5Log.txt  insert_avg.csv  instant.csv  log.txt  pointquery1.csv  pointquery1Log.txt  pointquery2.csv  pointquery2Log.txt  pointquery3.csv  pointquery3Log.txt  pointquery4.csv  pointquery4Log.txt  pointquery5.csv  pointquery5Log.txt  pointquery_avg.csv  query1.csv  query1Log.txt  query2.csv  (+29 more)
Experiments/Baseline_1_20220109/test_sanitizer/: Makefile
Experiments/BasicOperation/: insertInAll.cpp  move.cpp  swap.cpp
Experiments/BasicOperation/CBTDebug/: insert_pos2.txt  operations2.txt  swap1.cpp  swap2.cpp
Experiments/BasicOperation/DAonedp/: insert.cpp  randomOp.cpp
Experiments/BasicOperation/vector/: vector_vs_array.cpp  vector_vs_array_2  vector_vs_array_2.cpp
Experiments/CaseStudy/WhyTVFast/: tv_ada.cpp
Experiments/CaseStudy/workload/: Makefile  char2.py  charts.numbers  result_awards1.csv  result_awards2.csv  result_awards4.csv  result_awards5.csv  result_awards6.csv  try1  try1.cpp  try2  try2.cpp  wl1.cpp  wl2  wl2.cpp  wl2.csv
Experiments/CaseStudy_1/dataset/: load.py  load.sql
Experiments/CaseStudy_1/workload/: Makefile  chart2.py  m_result_awards1.csv  message  message.cpp
Experiments/Framework/: 100K.cpp  2threads.cpp  atomicFlag.cpp  exampleAtomic.cpp  insert.cpp
Experiments/Framework/asyn/: Makefile  asyn.cpp  asyn2.cpp  asyn2wofsanitize.cpp  asyn3.cpp  asyn4.cpp  asyn5.cpp  asyn6.cpp  asyn7.cpp  asynNoNewConn.cpp  syn.cpp  updateInThread.cpp
Experiments/Framework/prefetching/: Makefile  asyn.cpp  prefetching.cpp  prefetching2.cpp  prefetching3.cpp  prefetching4.cpp  prefetching5.cpp
Experiments/LL/: Makefile  swap10.cpp  swap102.cpp  swap103.cpp  swap11.cpp  swap12.cpp  swap13.cpp  swap4.cpp  swap5.cpp  swap6.cpp  swap7.cpp  swap8.cpp  swap9.cpp  swap92.cpp  swap93.cpp
Experiments/LLApr29/100K/: Makefile  swap0.cpp  swap1.cpp  swap2.cpp  swap3.cpp  swap4.cpp
Experiments/MemoryUsage/: CBT.cpp  DA.cpp  LL.cpp  Makefile  SA.cpp
Experiments/Scalability/100/: delete.cpp  insert.cpp  move.cpp  pointquery.cpp  query.cpp  reorder.cpp  swap.cpp
Experiments/Scalability/10K/: Makefile  delete.cpp  insert.cpp  move.cpp  pointquery.cpp  query.cpp  reorder.cpp  swap.cpp
Experiments/Scalability_3/: fig.py
Experiments/Scalability_3_repeat20/: fig.py
Experiments/Scalability_3_repeat5/: fig.py  fig_bar.py
Experiments/TroubleShooting/: insert.cpp  random.cpp  swapDA.cpp  swapLL.cpp
Experiments/e2e/100K/: Makefile  (+6 more)
Experiments/mysql/: Makefile  eg2.cpp  eg3.cpp  eg4.cpp
Experiments/other/: 1.cpp  Makefile  swap10.cpp  swap5.cpp  swap52.cpp  swap53.cpp
(+2078 files in other folders)
